resolve build error